--- a/frontend/src/locales/ru/FAQ.json
+++ b/frontend/src/locales/ru/FAQ.json
@@ -1,6 +1,7 @@
 {
   "faqTitle": "Часто задаваемые вопросы",
   "faqSubtitle": "Найдите ответы на самые распространённые вопросы о Smart Rent System",
+  "categoriesLabel": "Категории",
   "categories": {
     "general": "Общие вопросы",
     "booking": "Бронирование и аренда",
@@ -9,30 +10,58 @@
     "safety": "Безопасность",
     "account": "Управление аккаунтом"
   },
-  "needMoreHelp": "Нужна дополнительная помощь?",
-  "needMoreHelpDesc": "Если вы не нашли нужный ответ, наша служба поддержки готова помочь.",
-  "contactSupport": "Связаться с поддержкой",
-  "categoriesLabel": "Категории",
-  "helpCenter": "Центр помощи",
-  "helpCenterDesc": "Просмотрите подробные руководства, инструкции и советы по использованию Smart Rent.",
-  "visitHelpCenter": "Посетить центр помощи",
-  "safetyInfo": "Информация о безопасности",
-  "safetyInfoDesc": "Узнайте о наших протоколах безопасности, рекомендациях для гостей и хозяев, а также о ресурсах для экстренных случаев.",
-  "viewSafetyGuidelines": "Посмотреть рекомендации по безопасности"
-  ,
-  "categories": {
-    "general": "Общие вопросы",
-    "booking": "Бронирование и проживание",
-    "payment": "Оплата и возвраты",
-    "host": "Вопросы для хозяев",
-    "safety": "Безопасность",
-    "account": "Управление аккаунтом"
+  "general": {
+    "what-is-smart-rent": {
+      "question": "Что такое Smart Rent System?",
+      "answer": "Smart Rent System — это платформа, соединяющая путешественников с уникальными вариантами размещения по всему миру. Наша платформа позволяет хозяевам размещать свои объекты, а гостям — бронировать их. Мы обеспечиваем безопасные платежи, проверенные отзывы и поддержку клиентов для комфортного опыта каждого пользователя."
+    },
+    "how-to-start": {
+      "question": "Как начать пользоваться Smart Rent?",
+      "answer": "Начать очень просто! Просто создайте аккаунт, заполните профиль и начните искать объекты или размещайте свои. Просматривайте варианты по местоположению, цене, удобствам и другим параметрам, чтобы найти идеальное жилье для вашей следующей поездки."
+    },
+    "contact-support": {
+      "question": "Как связаться со службой поддержки?",
+      "answer": "Вы можете связаться с нашей службой поддержки через сайт, по электронной почте support@smartrentsystem.com или по телефону +1 (800) SMART-RENT. Мы работаем круглосуточно и готовы помочь с любыми вопросами."
+    },
+    "app-available": {
+      "question": "Есть ли мобильное приложение?",
+      "answer": "Да! Приложение Smart Rent System доступно для iOS и Android. Скачайте его в App Store или Google Play, чтобы управлять бронированиями, общаться с хозяевами и просматривать объекты на ходу."
+    }
   },
-  "categoriesLabel": "Категории",
-  "general": [],
-  "booking": [],
-  "payment": [],
-  "host": [],
-  "safety": [],
-  "account": []
+  "booking": {
+    "how-to-book": {
+      "question": "Как забронировать жильё?",
+      "answer": "Чтобы забронировать жильё, выберите нужное место и даты. Найдите подходящий вариант, нажмите 'Забронировать' и следуйте инструкциям. Некоторые объекты доступны для мгновенного бронирования, другие требуют подтверждения хозяина."
+    },
+    "booking-confirmation": {
+      "question": "Как узнать, что бронирование подтверждено?",
+      "answer": "После завершения бронирования вы получите подтверждение на электронную почту. Также статус бронирования можно посмотреть в разделе 'Поездки' вашего аккаунта."
+    },
+    "cancel-booking": {
+      "question": "Как отменить бронирование?",
+      "answer": "Чтобы отменить бронирование, перейдите в раздел 'Поездки', найдите нужное бронирование и выберите 'Отменить'. Сумма возврата зависит от политики отмены, указанной в деталях бронирования."
+    },
+    "modify-dates": {
+      "question": "Можно ли изменить даты бронирования?",
+      "answer": "Да, вы можете запросить изменение дат. Перейдите в раздел 'Поездки', выберите нужное бронирование и нажмите 'Изменить'. Изменения возможны при наличии свободных дат и с одобрения хозяина."
+    }
+  },
+  "payment": {
+    "payment-methods": {
+      "question": "Какие способы оплаты принимаются?",
+      "answer": "Мы принимаем основные кредитные и дебетовые карты (Visa, MasterCard, American Express, Discover), PayPal, а также Apple Pay и Google Pay в некоторых регионах. Все платежи обрабатываются безопасно через нашу платформу."
+    },
+    "payment-timing": {
+      "question": "Когда списываются средства за бронирование?",
+      "answer": "В большинстве случаев оплата производится при подтверждении бронирования хозяином или сразу при мгновенном бронировании. Для длительных или ранних бронирований возможна оплата в рассрочку."
+    },
+    "security-deposit": {
+      "question": "Что такое залог и когда он возвращается?",
+      "answer": "Залог удерживается для покрытия возможного ущерба. Если претензий нет, сумма автоматически возвращается через 14 дней после выезда."
+    },
+    "refund-process": {
+      "question": "Сколько времени занимает возврат средств?",
+      "answer": "После оформления возврата средства обычно поступают в течение 5-10 рабочих дней, в зависимости от банка и платёжной системы."
+    }
+  }
 }
